Some updates to neumorph

--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -1280,6 +1280,7 @@ Author: Michael Oswald
                                         <property name="shadow_type">in</property>
                                         <child>
                                           <object class="GtkTextView" id="textviewFrameContent">
+                                            <property name="name">#monotextview</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="buffer">textbufferTMFrameDetails</property>
@@ -2900,6 +2901,7 @@ Author: Michael Oswald
                                         <property name="shadow_type">in</property>
                                         <child>
                                           <object class="GtkTextView" id="textViewTCReqDetails">
+                                            <property name="name">#monotextview</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="editable">False</property>
