--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ checkbutton:disabled
               -4px -4px 4px 0 @light_shadow;
 }
 
+checkbutton#activecheck label:disabled {
+  color: #000;
+}
+
 
 
 entry 
@@ -136,19 +140,20 @@ notebook > header > tabs > tab:checked {
 }
 
 treeview.view header button {
-  margin: 2px; 
-  border-radius: 2px;
+  margin: 0px; 
+  min-height: 0;
+  border-radius: 0px;
   min-height: 0px;
   background-color:@bg_color;
   color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  2px 2px 2px 0 @dark_shadow, 
-              -2px -2px 2px 0 #ffffff;
+  border: 1px solid rgba(255,255,255,0.60);
+  box-shadow:  0px 0px 0px 0 @dark_shadow, 
+               0px 0px 0px 0 #ffffff; 
  
 }
 
 
-#error-entry {
+entry#error-entry {
   background-color: #ff0000;
   color: white;
   border: 1px solid rgba(255,255,255,0.60);
@@ -156,7 +161,7 @@ treeview.view header button {
               inset 4px 4px 4px 0 #ffffff;
 }
 
-#warn-entry {
+entry#warn-entry {
   background-color: #ffff00;
   color: black;
   border: 1px solid rgba(255,255,255,0.60);
@@ -164,7 +169,7 @@ treeview.view header button {
               inset 4px 4px 4px 0 #ffffff;
 }
 
-#green-entry {
+entry#green-entry {
   background-color: #00BB00;
   color: black;
   border: 1px solid rgba(255,255,255,0.60);
