--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -31,6 +31,7 @@ Author: Michael Oswald
 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <requires lib="gtksourceview" version="4.0"/>
   <!-- interface-license-type bsd3c -->
   <!-- interface-name AURISi -->
   <!-- interface-description AURISi - AURIS Integrated MCS -->
@@ -584,7 +585,17 @@ Author: Michael Oswald
                           </packing>
                         </child>
                         <child>
-                          <placeholder/>
+                          <object class="GtkSourceView">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="left_margin">2</property>
+                            <property name="right_margin">2</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
                         </child>
                       </object>
                       <packing>
@@ -1280,7 +1291,7 @@ Author: Michael Oswald
                                         <property name="shadow_type">in</property>
                                         <child>
                                           <object class="GtkTextView" id="textviewFrameContent">
-                                            <property name="name">#monotextview</property>
+                                            <property name="name">monotextview</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="buffer">textbufferTMFrameDetails</property>
@@ -2908,7 +2919,7 @@ Author: Michael Oswald
                                         <property name="shadow_type">in</property>
                                         <child>
                                           <object class="GtkTextView" id="textViewTCReqDetails">
-                                            <property name="name">#monotextview</property>
+                                            <property name="name">monotextview</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="editable">False</property>
@@ -2972,13 +2983,18 @@ Author: Michael Oswald
                     <property name="can_focus">True</property>
                     <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkTextView" id="textViewConfig">
+                      <object class="GtkSourceView" id="sourceViewConfig">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
+                        <property name="can_focus">False</property>
                         <property name="editable">False</property>
-                        <property name="cursor_visible">False</property>
+                        <property name="left_margin">2</property>
+                        <property name="right_margin">2</property>
                         <property name="accepts_tab">False</property>
                         <property name="monospace">True</property>
+                        <property name="show_line_numbers">True</property>
+                        <property name="show_line_marks">True</property>
+                        <property name="tab_width">4</property>
+                        <property name="insert_spaces_instead_of_tabs">True</property>
                       </object>
                     </child>
                   </object>
