--- a/aurisi/data/style.css
+++ b/aurisi/data/style.css
@@ -216,6 +216,9 @@ notebook > header > tabs {
   border-radius: 12px;
   color: #000;
   border: 1px solid rgba(255,255,255,0.60);
+  font-family: "Noto Sans";
+  font-size: 13px;
+  font-weight: normal;
   box-shadow: 2px 2px 4px 0 @dark_shadow, 
               -2px -2px 4px 0 @light_shadow;
 }
@@ -224,9 +227,11 @@ notebook > header > tabs > tab {
   background-color: @bg_color;
   border-radius: 12px;
   color: #000;
+  font-family: "Noto Sans";
+  font-size: 13px;
+  font-weight: normal;
   border: 1px solid rgba(255,255,255,0.60);
-  /* box-shadow: 1px 1px 1px 0 @dark_shadow, 
-              -1px -1px 1px 0 @light_shadow; */
+  box-shadow: -1px -1px 1px 0 @light_shadow;
 }
 
 notebook > header > tabs > tab:checked {
@@ -248,6 +253,9 @@ treeview.view header button {
   min-height: 0px;
   background-color:@bg_color;
   color: #000;
+  font-family: "Noto Sans";
+  font-size: 13px;
+  font-weight: normal;
   border: 1px solid rgba(255,255,255,0.60);
   box-shadow:  0px 0px 0px 0 @dark_shadow, 
                0px 0px 0px 0 #ffffff; 
