--- a/aurisi/data/MainWindow.glade
+++ b/aurisi/data/MainWindow.glade
@@ -860,18 +860,18 @@ Author: Michael Oswald
                                                     <property name="top_attach">2</property>
                                                   </packing>
                                                 </child>
-                                              </object>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">True</property>
-                                                <property name="padding">1</property>
-                                                <property name="position">1</property>
-                                              </packing>
-                                            </child>
-                                            <child>
-                                              <object class="GtkBox">
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
+                                                <child>
+                                                  <object class="GtkEntry" id="entryTMFrameGap">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="width_chars">26</property>
+                                                    <property name="xalign">1</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="top_attach">3</property>
+                                                  </packing>
+                                                </child>
                                                 <child>
                                                   <object class="GtkLabel">
                                                     <property name="visible">True</property>
@@ -879,22 +879,8 @@ Author: Michael Oswald
                                                     <property name="label" translatable="yes">Gap:</property>
                                                   </object>
                                                   <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="padding">4</property>
-                                                    <property name="position">0</property>
-                                                  </packing>
-                                                </child>
-                                                <child>
-                                                  <object class="GtkEntry" id="entryTMFrameGap">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">True</property>
-                                                    <property name="width_chars">5</property>
-                                                  </object>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="position">1</property>
+                                                    <property name="left_attach">0</property>
+                                                    <property name="top_attach">3</property>
                                                   </packing>
                                                 </child>
                                                 <child>
@@ -904,10 +890,8 @@ Author: Michael Oswald
                                                     <property name="label" translatable="yes">Order:</property>
                                                   </object>
                                                   <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="padding">5</property>
-                                                    <property name="position">2</property>
+                                                    <property name="left_attach">2</property>
+                                                    <property name="top_attach">3</property>
                                                   </packing>
                                                 </child>
                                                 <child>
@@ -919,16 +903,16 @@ Author: Michael Oswald
                                                     <property name="xalign">0.5</property>
                                                   </object>
                                                   <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="position">3</property>
+                                                    <property name="left_attach">3</property>
+                                                    <property name="top_attach">3</property>
                                                   </packing>
                                                 </child>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
-                                                <property name="fill">False</property>
-                                                <property name="position">2</property>
+                                                <property name="fill">True</property>
+                                                <property name="padding">1</property>
+                                                <property name="position">1</property>
                                               </packing>
                                             </child>
                                           </object>
@@ -2954,7 +2938,7 @@ Author: Michael Oswald
                         </child>
                         <child>
                           <object class="GtkSourceStyleSchemeChooserButton" id="buttonConfigSelectStyle">
-                            <property name="label" translatable="yes">Classic</property>
+                            <property name="label" translatable="yes">Kate</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
